@@ -1,3 +1,15 @@
+2001-08-07 Kevin Vandersloot <kfv101@psu.edu>
+
+	* proctable.c (get_process_nmae): strip the path from the
+	arguments string. Now process name show in their full glory.
+	(get_info): remove unneeded stuff
+	(update_info): update the name just as if icon needs updateing.
+
+	* procactions.c (kill_process): fix spelling of SIGTERM.
+
+	* prettytable.c (...get_name): return NULL if the process does
+	not have a .desktop file. 
+
 2001-08-06 Kevin Vandersloot <kfv101@psu.edu>
 
 	* proctable.c (get_process_name): new function to get the name.
